# protea

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.gitea/workflows/: build-container.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-develop.yml  ci.yml  release.yml
deploy/: docker-compose.prod.yml  docker-compose.test.yml
docs/: deployment.md  inventory-mcp-spec.md  local-llm-setup.md  protea-spec.md  software-layer-diagram.md  web-ui-spec.md
docs/features/: authentication.md  drawerdone-integration.md  enhanced-semantic-search.md  homelab-marketing.md  item-dimensions.md  mcp-architecture-demo.md  ollama-local-llm.md  open-source-launch.md  themes.md
docs/layouts/: layout-a-protea.html  layout-a-sidebar.html  layout-a-sossusvlei.html  layout-a-sunset.html  layout-b-topnav.html  layout-c-mobile.html
docs/presentation/: 00-presentation-overview.md  01-architecture-diagram.md  02-mcp-tools-overview.md  03-use-case-1-import-items.md  04-use-case-2-find-items.md  05-use-case-3-where-to-put.md  06-use-case-4-organize.md  07-screenshot-checklist.md
docs/status/: 01_13_2026.md  01_14_2026.md  01_15_2026.md  01_16_2026.md  01_17_2026.md  01_18_2026.md  01_24_2026.md  status-2026-01-25.md  status-2026-01-26.md
scripts/: inventory-sse-bridge.py  mcp-sse-client.py  start-web.sh
src/inventory_mcp/: __init__.py  backfill_embeddings.py  config.py  mcp_sse.py  server.py
src/inventory_mcp/db/: __init__.py  connection.py  models.py
src/inventory_mcp/db/migrations/: 001_initial.sql  002_seed_categories.sql  004_item_embeddings.sql
src/inventory_mcp/services/: __init__.py  embedding_service.py  image_store.py  product_lookup.py
src/inventory_mcp/tools/: __init__.py  aliases.py  bins.py  categories.py  items.py  locations.py  search.py  sessions.py  vision.py
src/inventory_mcp/web/: __init__.py  app.py  dependencies.py  tailwind.config.js
src/inventory_mcp/web/routes/: images.py  pages.py  partials.py
src/inventory_mcp/web/static/: app.css  app.js
src/inventory_mcp/web/templates/: base.html  bin.html  browse.html  item.html  location.html
src/protea/: __init__.py  backfill_embeddings.py  config.py  mcp_sse.py  server.py
src/protea/db/: __init__.py  connection.py  models.py
src/protea/db/migrations/: 003_nested_bins.sql  005_authentication.sql  006_system_settings.sql
src/protea/services/: __init__.py  embedding_service.py  image_store.py  product_lookup.py  system_settings.py
src/protea/tools/: __init__.py  admin.py  aliases.py  auth.py  bins.py  categories.py  items.py  locations.py  search.py  sessions.py  vision.py
src/protea/web/: __init__.py  app.py  dependencies.py  security.py
src/protea/web/routes/: __init__.py  auth.py  images.py  pages.py  partials.py  settings.py
tests/: __init__.py  conftest.py  test_bins.py  test_categories.py  test_embedding_service.py  test_items.py  test_locations.py  test_mcp_server.py  test_mcp_sse.py  test_product_lookup.py  test_search.py  test_sessions.py  test_vector_search.py  test_vision.py  test_web_routes.py
tools/: ollama_mcp_bridge.py
(+18 files in other folders)
